Corrected box overflow for img-title-description attribute for monile phone screens

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -399,12 +399,13 @@ footer.footer{
     padding:0;
     height: 150px;
   }
-  span.img-title-description{
-    width:67.5%;
+  div.img-container span.img-title-description{
+    position: relative;
+    width:100%;
     height: 150px;
     padding: 0;
     margin:0;
-    font-size: .65em;
+    font-size: .75em;
   }
   span.img-title-description h2,   span.img-title-description p{
     padding-top:10px;
@@ -417,5 +418,8 @@ footer.footer{
   }
   ul.list-inline p{
     font-size: .75em;
+  }
+  footer.footer{
+    font-size: .50em;
   }
 }
